--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("../node_modules/leaflet/dist/leaflet.css");
+@import url("../node_modules/reset-css/reset.css");
