Change HTML marker Size and color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <div id="map"></div>
+<div class="panel">
+  <input [(colorPicker)]="color" [style.background]="color" style="width: 50px;" 
+  (colorPickerChange) = "onChange()"/>
+  <ng5-slider [(value)]="value" [options]="options" (userChange)= "onChange()"></ng5-slider>
+
+</div>
