--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,15 @@
     width: 100vw;
     height: 100vh;
   }
+
+  .panel {
+    z-index: 800;
+    position: absolute;
+    top: 0px;
+    background: rgb(255, 224, 224);
+    width: 200px;
+    height: 100px;
+    margin: 80px 10px;
+  }
+
+  
