Add SVG icon and color it and add text inside

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   <input [(colorPicker)]="color" [style.background]="color" style="width: 50px;" 
   (colorPickerChange) = "onChange()"/>
   <ng5-slider [(value)]="value" [options]="options" (userChange)= "onChange()"></ng5-slider>
-
+  <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 512 512"><path d="M224 387.814V512L32 320l192-192v126.912C447.375 260.152 437.794 103.016 380.931 0 521.286 151.707 491.481 394.785 224 387.814z" fill="#fdbf00"/></svg>
 </div>
